--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: nanajanashia/argocd-app:1.2
+        image: sabair0509/hiring-app:8
         ports:
         - containerPort: 8080
