--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -5,8 +5,8 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - nodePort: 32000
+    - nodePort: 32010       # ✅ Changed to a free NodePort
       port: 9000
       targetPort: 8080
   selector:
-    app: myapp
+    app: hiring-app         # ✅ Match with Deployment label
